--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,12 @@
   "version": 2,
   "builds": [
     {
-      "src": "project/store/wsgi.py",
+      "src": "store/wsgi.py",
       "use": "@vercel/python",
       "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
     },
     {
-      "src": "project/build_files.sh",
+      "src": "build_files.sh",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "staticfiles_build"
@@ -16,12 +16,12 @@
   ],
   "routes": [
     {
-      "src": "project/static/(.*)",
-      "dest": "project/static/$1"
+      "src": "static/(.*)",
+      "dest": "static/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "project/store/wsgi.py"
+      "dest": "store/wsgi.py"
     }
   ]
 }
